// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots components|m-expandable-layout default 1`] = `
<div
  class="m-expandable-layout m--has-left-panel"
  style="padding-left: 0px;"
>
  Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim accusamus sint minus, modi rerum pariatur molestiae repellat ipsam suscipit id, accusantium a neque mollitia ab culpa! Quisquam maiores inventore reprehenderit?  
  <div
    class="m-expandable-layout__panel"
    style="left: -320px; width: 320px;"
  >
    panel content
  </div>
</div>
`;

exports[`Storyshots components|m-expandable-layout open 1`] = `
<div
  class="m-expandable-layout m--has-left-panel"
  style="padding-left: 320px;"
>
  main content 
  <div
    class="m-expandable-layout__panel"
    style="left: 0px; width: 320px;"
  >
    panel content
  </div>
</div>
`;

exports[`Storyshots components|m-expandable-layout panel-position="right" 1`] = `
<div
  class="m-expandable-layout m--has-right-panel"
  style="padding-right: 320px;"
>
  main content 
  <div
    class="m-expandable-layout__panel"
    style="right: 0px; width: 320px;"
  >
    panel content
  </div>
</div>
`;

exports[`Storyshots components|m-expandable-layout size 1`] = `
<div
  class="m-expandable-layout m--has-left-panel"
  style="padding-left: 600px;"
>
  main content 
  <div
    class="m-expandable-layout__panel"
    style="left: 0px; width: 600px;"
  >
    panel content
  </div>
</div>
`;
